<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deploy_step_runtime_title"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_deploy_environment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deploy_env_hint" />

        <EditText
            android:id="@+id/et_deploy_endpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deploy_endpoint_hint" />

        <EditText
            android:id="@+id/et_deploy_release_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deploy_release_channel_hint" />

        <EditText
            android:id="@+id/et_deploy_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/deploy_notes_hint"
            android:inputType="textMultiLine"
            android:minLines="3" />
    </LinearLayout>
</ScrollView>
